testsuite/tests/acomp/T16628.stderr

T16628.hs:7:30: error:
    • No instance for (MonadFail Identity)
        arising from a do statement
        with the failable pattern ‘[x]’
    • In a stmt of a monad comprehension: [x] <- i1
      In the expression:
        [x + 42 |
           _ <- i0
           [x] <- i1]
      In an equation for ‘f’:
          f i0 i1
            = [x + 42 |
                 _ <- i0
                 [x] <- i1]
